--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.30)
-project(tp_calculator)
+project(tp_calculator VERSION 1.0.0)
 
 # Set C++ standard and enable AUTOMOC, AUTORCC, AUTOUIC
 set(CMAKE_AUTOMOC ON)
@@ -7,6 +7,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_CXX_STANDARD 23)
 
+set(CMAKE_MACOSX_BUNDLE ON)
+set(APP_NAME "TP Calculator")
 set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_CURRENT_SOURCE_DIR}/views)
 
 # Find Qt6 components
@@ -33,9 +35,52 @@ source_group("views" FILES views/main_window.ui)
 # Create the executable
 add_executable(tp_calculator ${SOURCES})
 
+if(APPLE)
+    set_target_properties(tp_calculator PROPERTIES
+        MACOSX_BUNDLE TRUE
+        OUTPUT_NAME "${APP_NAME}"
+        MACOSX_BUNDLE_BUNDLE_NAME "${APP_NAME}"
+    )
+else()
+    set_target_properties(tp_calculator PROPERTIES
+        MACOSX_BUNDLE TRUE
+        OUTPUT_NAME "${APP_NAME}"
+        MACOSX_BUNDLE_BUNDLE_NAME "${APP_NAME}"
+    )
+endif()
+
 # Link Qt libraries
 target_link_libraries(tp_calculator
         Qt::Core
         Qt::Gui
         Qt::Widgets
 )
+
+include(InstallRequiredSystemLibraries)
+
+if(WIN32)
+    set(CPACK_GENERATOR "NSIS")
+elseif(APPLE)
+    set(CPACK_GENERATOR "DragNDrop")
+else()
+    set(CPACK_GENERATOR "DEB")
+endif()
+
+# Define the install target (install app binary)
+if(APPLE)
+    install(TARGETS tp_calculator BUNDLE DESTINATION .)
+else()
+    install(TARGETS tp_calculator RUNTIME DESTINATION bin)
+endif()
+
+set(CPACK_PACKAGE_NAME "${APP_NAME}")
+set(CPACK_PACKAGE_VENDOR "Aleksey Demchenkov")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A simple Qt-based calculator as a term project.")
+set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
+set(CPACK_PACKAGE_CONTACT "pelfox@younunion.ru")
+
+set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CMAKE_SYSTEM_NAME}")
+set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-Source")
+
+# Include CPack module
+include(CPack)
